2008-04-26  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi: add g_get_tmp_dir binding,
	patch by Nicolas Joseph, fixes bug 529776

2008-04-26  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gtk+-2.0/: fix gtk_image_* and gtk_icon_size_*
	bindings, patch by Nicolas Joseph, fixes bug 529770

	* vapi/gtk+-2.0.vapi: regenerated

2008-04-26  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodegenerator.vala:
	* gobject/valaccodetypesymbolbinding.vala:

	Fix `char' properties, fixes bug 529604

2008-04-26  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodeclassbinding.vala:

	Fix DBus services with multiple methods, fixes bug 529571

2008-04-26  Jürg Billeter  <j@bitron.ch>

	* vala/valacatchclause.vala:
	* gobject/valaccodegenerator.vala:

	Support catch clauses without error variable, fixes bug 529539

2008-04-26  Jürg Billeter  <j@bitron.ch>

	* vala/valanamespace.vala:
	* vala/valaparser.vala:

	Respect nested namespaces when merging namespaces, fixes bug 529438

2008-04-24  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi: fix g_key_file_to_data binding,
	  patch by Daniel Svensson

2008-04-24  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gtk+-2.0/: nullable and generic type fixes,
	  patch by Daniel Svensson

	* vapi/gtk+-2.0.vapi: regenerated

2008-04-23  Jürg Billeter  <j@bitron.ch>

	* vala/valaparser.vala: re-add support for pre- and postconditions

2008-04-23  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi: fix g_signal_* bindings,
	patch by Evan Nemerson

2008-04-23  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodeinvocationexpressionbinding.vala:
	Don't cast out arguments

2008-04-23  Jürg Billeter  <j@bitron.ch>

	Add support for class constructors, class fields, and class
	methods, fixes bug 507136

2008-04-23  Jürg Billeter  <j@bitron.ch>

	* vala/valaparser.vala:
	Fix nested namespaces

2008-04-23  Jürg Billeter  <j@bitron.ch>

	* vala/valaforstatement.vala:
	* ccode/valaccodeforstatement.vala: